src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_cumulative_trapezoid(value y, value x, int64_t dim);
value atg_cumulative_trapezoid_dx(value y, value dx, int64_t dim);
value atg_data(value self);
value atg_deg2rad(value self);
value atg_deg2rad_(value self);
value atg_deg2rad_out(value out, value self);
value atg_dense_dim(value self);
value atg_dequantize(value self);
value atg_dequantize_self_out(value out, value self);
value atg_dequantize_tensors(value tensors);
void atg_dequantize_tensors_out(value out, value tensors);
value atg_det(value self);
value atg_detach(value self);
value atg_detach_(value self);
value atg_detach_copy(value self);
value atg_detach_copy_out(value out, value self);
value atg_diag(value self, int64_t diagonal);
value atg_diag_embed(value self, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diag_embed_out(value out, value self, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diag_out(value out, value self, int64_t diagonal);
value atg_diagflat(value self, int64_t offset);
value atg_diagonal(value self, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diagonal_backward(value grad_output, value input_sizes, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diagonal_backward_out(value out, value grad_output, value input_sizes, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diagonal_copy(value self, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diagonal_copy_out(value out, value self, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diagonal_scatter(value self, value src, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diagonal_scatter_out(value out, value self, value src, int64_t offset, int64_t dim1, int64_t dim2);
value atg_diff(value self, int64_t n, int64_t dim, value prepend, value append);
value atg_diff_out(value out, value self, int64_t n, int64_t dim, value prepend, value append);
value atg_digamma(value self);
value atg_digamma_(value self);
value atg_digamma_out(value out, value self);
value atg_dist(value self, value other, value p);
value atg_dist_out(value out, value self, value other, value p);
value atg_div(value self, value other);
value atg_div_(value self, value other);
value atg_div_out(value out, value self, value other);
value atg_div_out_mode(value out, value self, value other, value rounding_mode);
value atg_div_scalar(value self, value other);
value atg_div_scalar_(value self, value other);
value atg_div_scalar_mode(value self, value other, value rounding_mode);
value atg_div_scalar_mode_(value self, value other, value rounding_mode);
value atg_div_scalar_mode_out(value out, value self, value other, value rounding_mode);
value atg_div_scalar_out(value out, value self, value other);
value atg_div_tensor_mode(value self, value other, value rounding_mode);
value atg_div_tensor_mode_(value self, value other, value rounding_mode);
value atg_divide(value self, value other);
value atg_divide_(value self, value other);
value atg_divide_out(value out, value self, value other);
value atg_divide_out_mode(value out, value self, value other, value rounding_mode);
value atg_divide_scalar(value self, value other);
value atg_divide_scalar_(value self, value other);
value atg_divide_scalar_mode(value self, value other, value rounding_mode);
value atg_divide_scalar_mode_(value self, value other, value rounding_mode);
value atg_divide_tensor_mode(value self, value other, value rounding_mode);
value atg_divide_tensor_mode_(value self, value other, value rounding_mode);