src/bindings/torch_bindings_generated2.ml


  let stubs_cumulative_trapezoid =
    foreign
      "atg_cumulative_trapezoid"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_cumulative_trapezoid_dx =
    foreign
      "atg_cumulative_trapezoid_dx"
      (gc_tensor @-> scalar @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_data = foreign "atg_data" (gc_tensor @-> returning raw_tensor)
  let stubs_deg2rad = foreign "atg_deg2rad" (gc_tensor @-> returning raw_tensor)
  let stubs_deg2rad_ = foreign "atg_deg2rad_" (gc_tensor @-> returning raw_tensor)

  let stubs_deg2rad_out =
    foreign "atg_deg2rad_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_dense_dim = foreign "atg_dense_dim" (gc_tensor @-> returning int64_t)
  let stubs_dequantize = foreign "atg_dequantize" (gc_tensor @-> returning raw_tensor)

  let stubs_dequantize_self_out =
    foreign "atg_dequantize_self_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_dequantize_tensors =
    foreign "atg_dequantize_tensors" (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_dequantize_tensors_out =
    foreign
      "atg_dequantize_tensors_out"
      (ptr gc_tensor @-> int @-> ptr gc_tensor @-> int @-> returning void)
  ;;

  let stubs_det = foreign "atg_det" (gc_tensor @-> returning raw_tensor)
  let stubs_detach = foreign "atg_detach" (gc_tensor @-> returning raw_tensor)
  let stubs_detach_ = foreign "atg_detach_" (gc_tensor @-> returning raw_tensor)
  let stubs_detach_copy = foreign "atg_detach_copy" (gc_tensor @-> returning raw_tensor)

  let stubs_detach_copy_out =
    foreign "atg_detach_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_diag = foreign "atg_diag" (gc_tensor @-> int64_t @-> returning raw_tensor)

  let stubs_diag_embed =
    foreign
      "atg_diag_embed"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_diag_embed_out =
    foreign
      "atg_diag_embed_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_diag_out =
    foreign "atg_diag_out" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_diagflat =
    foreign "atg_diagflat" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_diagonal =
    foreign
      "atg_diagonal"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_diagonal_backward =
    foreign
      "atg_diagonal_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_diagonal_backward_out =
    foreign
      "atg_diagonal_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_diagonal_copy =
    foreign
      "atg_diagonal_copy"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_diagonal_copy_out =
    foreign
      "atg_diagonal_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_diagonal_scatter =
    foreign
      "atg_diagonal_scatter"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_diagonal_scatter_out =
    foreign
      "atg_diagonal_scatter_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_diff =
    foreign
      "atg_diff"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_diff_out =
    foreign
      "atg_diff_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_digamma = foreign "atg_digamma" (gc_tensor @-> returning raw_tensor)
  let stubs_digamma_ = foreign "atg_digamma_" (gc_tensor @-> returning raw_tensor)

  let stubs_digamma_out =
    foreign "atg_digamma_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_dist =
    foreign "atg_dist" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_dist_out =
    foreign
      "atg_dist_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_div = foreign "atg_div" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  let stubs_div_ = foreign "atg_div_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_div_out =
    foreign "atg_div_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_div_out_mode =
    foreign
      "atg_div_out_mode"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_div_scalar =
    foreign "atg_div_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_div_scalar_ =
    foreign "atg_div_scalar_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_div_scalar_mode =
    foreign
      "atg_div_scalar_mode"
      (gc_tensor @-> scalar @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_div_scalar_mode_ =
    foreign
      "atg_div_scalar_mode_"
      (gc_tensor @-> scalar @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_div_scalar_mode_out =
    foreign
      "atg_div_scalar_mode_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_div_scalar_out =
    foreign
      "atg_div_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_div_tensor_mode =
    foreign
      "atg_div_tensor_mode"
      (gc_tensor @-> gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_div_tensor_mode_ =
    foreign
      "atg_div_tensor_mode_"
      (gc_tensor @-> gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_divide =
    foreign "atg_divide" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_divide_ =
    foreign "atg_divide_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_divide_out =
    foreign
      "atg_divide_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_divide_out_mode =
    foreign
      "atg_divide_out_mode"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_divide_scalar =
    foreign "atg_divide_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_divide_scalar_ =
    foreign "atg_divide_scalar_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_divide_scalar_mode =
    foreign
      "atg_divide_scalar_mode"
      (gc_tensor @-> scalar @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_divide_scalar_mode_ =
    foreign
      "atg_divide_scalar_mode_"
      (gc_tensor @-> scalar @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_divide_tensor_mode =
    foreign
      "atg_divide_tensor_mode"
      (gc_tensor @-> gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_divide_tensor_mode_ =
    foreign
      "atg_divide_tensor_mode_"
      (gc_tensor @-> gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;
end

module C (F : Cstubs.FOREIGN) = struct
  include C0 (F)
  include C1 (F)
  include C2 (F)
  include C3 (F)
end
